--- a/css/main.css
+++ b/css/main.css
@@ -56,7 +56,7 @@ table {
 }
 
 .text-red {
-  color: red;
+  color: #FC9D9A;
 }
 
 .pull-rigth {
@@ -73,7 +73,7 @@ table {
 
 
 .fa {
-  color: #f00;
+  color: #297973;
 }
 .fa.fa-shopping-bag,
 .fa.fa-cloud-upload,
