--- a/views/contacto.html
+++ b/views/contacto.html
@@ -26,7 +26,7 @@
         <li>
           <span class="icon"><i class="fa fa-envelope fa-2x"></i></span>
           <span class="text">
-            contacto_info@ae.com
+            mozaico-shoes@mail.com
           </span>
         </li>
       </ul>
@@ -69,7 +69,7 @@
           </div>
 
           <div class="col-sm-12">
-            <button class="btn btn-red btn-block" type="submit"> <i class="fa fa-paper-plane"></i> Enviar </button>
+            <button class="btn btn-red" type="submit"> <i class="fa fa-paper-plane"></i> Enviar </button>
           </div>
         </form>
       </div>
