--- a/views/footer-login.html
+++ b/views/footer-login.html
@@ -33,7 +33,7 @@
               <p>Zona Residencial</p>
               <p>Zapopan, Jalisco</p>
               <p>01 33 1234 5700</p>
-              <p>andrea@mail.com</p>
+              <p>mozaico-shoes@mail.com</p>
             </div>
           </nav>
         </div> 
