--- a/views/header.html
+++ b/views/header.html
@@ -24,7 +24,7 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/media-queries.css">
-    <link rel="icon" type="image/png" href="img/icono.jpg" />
+    <link rel="icon" type="image/png" href="icon.png" />
     <script src="js/jquery-2.2.2.js"></script>
 
     <!--[if lt IE 9]>
