--- a/views/home.html
+++ b/views/home.html
@@ -130,6 +130,32 @@
       </div>
     </section>
 
+    <section id="socios" class="container">
+      <h1>Socios</h1>
+      <div class="container-fluid">
+        <div class="row content">
+          <!--socios-->
+          <h4>{{nombre}}</h4>
+          <div class="socio">
+            <figure class="col-xs-12 col-sm-4 col-md-3 padding-0">
+              <img src="{{image}}" alt="{{socio}}"/>
+              <div class="overlay">
+                <ul>
+                  <li>
+                    <a class="btn btn-lg btn-red" href="{{page}}" target="_blank"><span class="glyphicon glyphicon-zoom-in" aria-hidden="true"></span></a>
+                  </li>
+                  <li>
+                    <button type="button" class="btn btn-lg btn-red"><span class="glyphicon glyphicon-hand-left" aria-hidden="true"></span></button>
+                  </li>
+                </ul>
+              </div>
+            </figure>
+          </div>
+          <!--.socios-->
+        </div>
+      </div>
+    </section>
+
     <section class="container">
       <h1>Marcas</h1>
       <div id="slider-marcas" class="owl-carousel owl-theme">
