--- a/views/menu-login.html
+++ b/views/menu-login.html
@@ -1,24 +1,21 @@
 <div class="container-navbar-full navbar-fixed-top black">
   <nav class="navbar navbar-default container navbar-full no-shadow navbar-inverse">
-    <div class="hidden-xs">
-      <span class="navbar-text"><i class="fa fa-mobile"></i> 11 123 456 7890  <i class="fa fa-envelope"></i> info@sitename.com</span>
-    </div>
     <form class="navbar-form navbar-right" role="search">
       <div class="input-group">
-        <input type="text" class="form-control" placeholder="Buscar">
+        <input type="text" class="form-control input-sm" placeholder="Buscar">
         <span class="input-group-btn">
-          <button class="btn btn-white" type="button"><i class="fa fa-search"></i></button>
+          <button id="btn-seacrh" class="btn btn-white" type="button"><i class="fa fa-search"></i></button>
         </span>
       </div>
     </form>
   </nav>
 </div>
 
-<div class="container-fluid navbar-fixed-top visible-xs white">
-  <img id="logo-big" src="img/logo.png"/>
+<div class="container-fluid navbar-fixed-top visible-xs turquoise">
+  
 </div>
 
-<div class="container-navbar-full navbar-fixed-top white">
+<div class="container-navbar-full navbar-fixed-top turquoise">
   <nav class="navbar navbar-default container navbar-full no-shadow" role="navigation">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle btn-red collapsed" data-toggle="collapse"
@@ -28,7 +25,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand hidden-xs hidden-sm" href="#"><img id="logo-small" src="img/logo.png"></a>
+      <a class="navbar-brand hidden-xs hidden-sm" href="#"></a>
     </div>
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -83,7 +80,7 @@
     
       <!-- Modal content-->
       <div class="modal-content">
-        <div class="modal-header modal-header-dark">
+        <div class="modal-header modal-header">
           <button type="button" class="close" data-dismiss="modal"><i class="fa fa-times"></i></button>
           <h4 class="modal-title">Iniciar sesión</h4>
         </div>
@@ -119,7 +116,7 @@
             </form>
           </div>
         </div>
-        <div class="modal-footer modal-footer-dark">
+        <div class="modal-footer modal-footer">
           <a href="index.php?ctrl=usuario&action=recuperar" class="btn btn-link">¿Olvidaste la contraseña?</a>
           <a href="index.php?ctrl=usuario&action=registro" class="btn btn-link pull-right">¡Regístrate!</a>
         </div>
