--- a/views/producto.html
+++ b/views/producto.html
@@ -42,8 +42,8 @@
           <!--.talla-->
         </ul>
       </nav>
-      <p class="price pull-right">${{precio}}</p>
-      <button type="submit" class="btn btn-red btn-lg btn-block"><i class="fa fa-check"></i> Comprar</button>
+      <p class="price">${{precio}}</p>
+      <button type="submit" class="btn btn-red btn-lg pull-right"><i class="fa fa-check"></i> Comprar</button>
       </form>
     </div>
   </section>
