--- a/admin/views/navigation.html
+++ b/admin/views/navigation.html
@@ -9,7 +9,7 @@
   <title></title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <link rel="icon" type="image/png" href="../img/icono.jpg" />
+  <link rel="icon" type="image/png" href="../icon.png" />
   <link rel="stylesheet" href="../css/normalize.css"/>
   <link rel="stylesheet" href="../css/font-awesome.css"/>
   <link rel="stylesheet" href="../css/bootstrap.min.css"/>
