--- a/css/modal.css
+++ b/css/modal.css
@@ -2,10 +2,10 @@
 z-index: 10000;
 }
 
-.modal-header, 
-.modal-footer {
-  background: #F2F2F2;
-  color: #FF6C60;
+.modal-header,
+.modal-footer{
+  background: #3FB8AF;
+  color: #fff;
 }
 
 .modal-header-red, 
@@ -16,7 +16,7 @@ z-index: 10000;
 
 .modal-header-dark, 
 .modal-footer-dark {
-  background: #292522;
+  background: #000;
   color: #fff;
 }
 
