--- a/views/modal_address.html
+++ b/views/modal_address.html
@@ -3,7 +3,7 @@
 
     <!-- Modal content-->
     <div class="modal-content">
-      <div class="modal-header modal-header-dark">
+      <div class="modal-header modal-header">
         <button type="button" class="close" data-dismiss="modal"><i class="fa fa-times"></i></button>
         <h4 class="modal-title">Agregar domicilio</h4>
       </div>
@@ -84,12 +84,12 @@
           </div>
 
           <div class="form-group">
-            <button type="submit" class="btn btn-red btn-lg btn-block"><i class="fa fa-paper-plane"></i> Guardar</button>
+            <button type="submit" class="btn btn-red btn-lg"><i class="fa fa-paper-plane"></i> Guardar</button>
           </div>
 
         </form>
       </div>
-      <div class="modal-footer modal-footer-dark">
+      <div class="modal-footer modal-footer">
         
       </div>
     </div>
