--- a/views/modal_phone.html
+++ b/views/modal_phone.html
@@ -3,7 +3,7 @@
 
     <!-- Modal content-->
     <div class="modal-content">
-      <div class="modal-header modal-header-dark">
+      <div class="modal-header modal-header">
         <button type="button" class="close" data-dismiss="modal">&times;</button>
         <h4 class="modal-title">Modal Header</h4>
       </div>
@@ -24,11 +24,11 @@
             </div>
           </div>
           <div class="form-group">
-            <button class="btn btn-red btn-lg btn-block" type="submit"><i class="fa fa-paper-plane"></i> Guardar</button>
+            <button class="btn btn-red btn-lg" type="submit"><i class="fa fa-paper-plane"></i> Guardar</button>
           </div>
         </form>
       </div>
-      <div class="modal-footer modal-footer-dark">
+      <div class="modal-footer modal-footer">
       </div>
     </div>
 
